--- a/option-expiries/style.css
+++ b/option-expiries/style.css
@@ -1,23 +1,26 @@
 content {
-	background-color: #222222;
-	font-size: 10px;
 	margin: 0px;
 	padding: 0px;
-	width: 100%;
+	background-color: #222222;
+	font-size: 10px;
+}
+
+title {
+	background-color: rgb(255, 152, 0);
+	font-size: 18px;
+	text-shadow: -1px 0px 1px rgb(97, 100, 5);
+	color: white;
+	padding: 5px;
 }
 
 title,
-	ccypair {
+ccypair {
+	display: block;
 	color: #dfc48c;
 	text-align: center;
 }
 
-title {
-	text-shadow: -1px 0px 1px rgb(97, 100, 5);
-	background-color: rgb(255, 152, 0);
-	color: white;
-	padding: 5px;
-}
+
 
 expiries {
 	display: flex;
