--- a/option-expiries/style.css
+++ b/option-expiries/style.css
@@ -1,63 +1,18 @@
-content {
+* {
 	margin: 0px;
 	padding: 0px;
+	display: block;
+}
+
+content {
 	background-color: #222222;
-	font-size: 10px;
 }
 
 title {
-	background-color: rgb(255, 152, 0);
-	font-size: 18px;
-	text-shadow: -1px 0px 1px rgb(97, 100, 5);
-	color: white;
 	padding: 5px;
-	display: block;
+	font-size: 18px;
+	background-color: rgb(255, 152, 0);
 	color: #dfc48c;
+	text-shadow: -1px 0px 1px rgb(97, 100, 5);
 	text-align: center;
-}
-
-ccypair-expiries {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-	align-items: flex-start;
-	align-content: flex-start;
-	padding: 10px;
-	align-content: stretch;
-}
-
-ccypair {
-	display: block;
-	color: #dfc48c;
-	text-align: center;
-}
-
-expiries {
-	text-align: center;
-	border: 0.5px solid black;
-	max-width: 100px;
-	width: 25%;
-	white-space: nowrap;
-	align-items: stretch;
-	padding: 0px 10px 10px 10px;
-	margin-right: 10px;
-	margin-bottom: 10px;
-}
-
-expiry {
-	white-space: nowrap;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
-
-strk {
-	color: #9b869c;
-}
-
-amnt {
-	text-align: left;
-	color: #ab875d;
 }
