--- a/option-expiries/style.css
+++ b/option-expiries/style.css
@@ -1,18 +1,34 @@
 * {
-	margin: 0px;
-	padding: 0px;
-	display: block;
-}
-
-content {
-	background-color: #222222;
+  margin: 0px;
+  padding: 0px;
 }
 
 title {
-	padding: 5px;
-	font-size: 18px;
-	background-color: rgb(255, 152, 0);
-	color: #dfc48c;
-	text-shadow: -1px 0px 1px rgb(97, 100, 5);
-	text-align: center;
+  display: block;
+  padding: 5px;
+  font-size: 18px;
+  text-align: center;
+}
+
+ccypair_expiries {
+  margin: 10px;
+  padding: 10px;
+  background: #dfc48c;
+  display: inline-block;
+}
+
+ccypair {
+  text-align: center;
+  display: block;
+  margin-bottom: 10px;
+}
+
+expiry {
+  display: block;
+}
+
+strike,
+amount {
+  width: 50%;
+  margin: 10px;
 }
